fixing some layout alignments

--- a/driver_app/src/index.css
+++ b/driver_app/src/index.css
@@ -58,6 +58,6 @@
     }
 
     .margin-x {
-        @apply mx-[5.5rem];
+        @apply mx-10;
     }
 }
